# esercizipcs2026

./: fileuno.txt
esercitazione1/: media.cpp  prova1.cpp
esercitazione2/: CMakeLists.txt  considerazioni.txt  es2parte1punto1.cpp  es2parte1punto2.cpp  es2parte2.cpp  es2parte3.cpp  filedue.cpp  parte2.cpp
esercizi1/: CMakeLists.txt  media.cpp
